--- a/Gestion_AcademicoAdministrativa_Abastos/Styles/ComboBox.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Styles/ComboBox.xaml
@@ -11,15 +11,15 @@
                   x:Name="Border" 
                   Grid.ColumnSpan="2"
                   CornerRadius="0"
-                  Background="#FF3F3F3F"
-                  BorderBrush="#FF97A0A5"
+                  Background="{StaticResource TopBarGradient}" 
+                  BorderBrush="Transparent"
                   BorderThickness="1" />
             <Border 
                   Grid.Column="0"
                   CornerRadius="0" 
                   Margin="1" 
-                  Background="#FF3F3F3F" 
-                  BorderBrush="#FF97A0A5"
+                  Background="{StaticResource TopBarGradient}" 
+                  BorderBrush="Transparent"
                   BorderThickness="0,0,1,0" />
             <Path 
                   x:Name="Arrow"
@@ -89,10 +89,10 @@
                               MaxHeight="{TemplateBinding MaxDropDownHeight}">
                                 <Border 
                                 x:Name="DropDownBorder"
-                                Background="#FF3F3F3F"
-                                CornerRadius="15, 0, 15, 0"
-                                BorderThickness="2.5"
-                                BorderBrush="#888888"/>
+                                Background="{DynamicResource BackgroundContainerGradient}"
+                                CornerRadius="15, 15, 0, 0"
+                                BorderThickness="0"
+                                BorderBrush="Transparent"/>
                                 <ScrollViewer Margin="4,6,4,6" SnapsToDevicePixels="True">
                                     <StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Contained" />
                                 </ScrollViewer>
@@ -144,7 +144,8 @@
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsHighlighted" Value="true">
-                            <Setter TargetName="Border" Property="Background" Value="#FF4F4F4F"/>
+                            <Setter TargetName="Border" Property="Background" Value="{StaticResource StandOutColorSolid}"/>
+                            <Setter Property="Foreground" Value="{StaticResource MainColorSolid}"/>
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="false">
                             <Setter Property="Foreground" Value="#888888"/>
