--- a/Gestion_AcademicoAdministrativa_Abastos/BuscadorV2.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/BuscadorV2.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Gestion_AcademicoAdministrativa_Abastos.BuscadorPersona"
+﻿<Window x:Class="Gestion_AcademicoAdministrativa_Abastos.BuscadorV2"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
