--- a/Gestion_AcademicoAdministrativa_Abastos/FormularioPersona.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/FormularioPersona.xaml
@@ -1,11 +1,13 @@
-﻿<Window x:Class="Gestion_AcademicoAdministrativa_Abastos.CrearPersonaç"
+﻿<Window x:Class="Gestion_AcademicoAdministrativa_Abastos.FormularioPersona"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                    xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos"
-        mc:Ignorable="d"
-        Title="CrearPersonaç" Height="450" Width="800">
+        xmlns:controls="clr-namespace:Gestion_AcademicoAdministrativa_Abastos.CustomElements"
+        mc:Ignorable="d" Style="{StaticResource WindowStyle}"
+        Title="CrearPersonaç">
     <Grid x:Name="Container" Grid.Row="1" Background="#FF15171B" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <Grid x:Name="MainGridContent" Grid.Row="1" Background="{DynamicResource MainColorSolid}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <Grid x:Name="MainPanel" Grid.Column="1" Panel.ZIndex="-2">
@@ -42,20 +44,40 @@
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="10*" />
+                            <RowDefinition Height="5*" />
+                            <RowDefinition Height="5*" />
+                            <RowDefinition Height="10*" />
+                            <RowDefinition Height="5*" />
+                            <RowDefinition Height="10*" />
+                            <RowDefinition Height="5*" />
+                            <RowDefinition Height="10*" />
                         </Grid.RowDefinitions>
-                        <TextBox x:Name="TxtNombre" />
-                        <TextBlock IsHitTestVisible="False" Text="Nombre" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0" Foreground="DarkGray">
-                            <TextBlock.Style>
-                                <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource NotificationContent}">
-                                    <Setter Property="Visibility" Value="Collapsed" />
-                                    <Style.Triggers>
-                                        <DataTrigger Binding="{Binding Text, ElementName=TxtNombre}" Value="">
-                                            <Setter Property="Visibility" Value="Visible" />
-                                        </DataTrigger>
-                                    </Style.Triggers>
-                                </Style>
-                            </TextBlock.Style>
-                        </TextBlock>
+                        <Label />
+                        <Grid Grid.Row="1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="35*" />
+                                <ColumnDefinition Width="15*" />
+                                <ColumnDefinition Width="50*" />
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="25*" />
+                                <RowDefinition Height="75*" />
+                            </Grid.RowDefinitions>
+                            <Label Content="Nombre" Grid.Column="0"/>
+                            <TextBox x:Name="TxtNombre" Grid.Column="0" Grid.Row="1">
+                                <controls:CueBannerService.CueBanner>
+                                    <TextBlock Style="{StaticResource PlaceHolderContent}"
+                                               Text="Nombre" />
+                                </controls:CueBannerService.CueBanner>
+                            </TextBox>
+                            <Label Content="Apellidos" Grid.Column="2"/>
+                            <TextBox Grid.Column="2" x:Name="TxtApellidos" Grid.Row="1">
+                                <controls:CueBannerService.CueBanner>
+                                    <TextBlock Style="{StaticResource PlaceHolderContent}"
+                                               Text="Apellidos" />
+                                </controls:CueBannerService.CueBanner>
+                            </TextBox>
+                        </Grid>
                         <Button Grid.Row="6" Content="Crear Persona" />
                     </Grid>
                 </Grid>
