Move Constants to Strings Folder

--- a/Gestion_AcademicoAdministrativa_Abastos/App.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/App.xaml
@@ -18,6 +18,7 @@
                 <ResourceDictionary Source="styles/ContextMenu.xaml"/>
                 <ResourceDictionary Source="styles/Slider.xaml"/>
                 <ResourceDictionary Source="styles/ComboBox.xaml"/>
+                <ResourceDictionary Source="Strings/Constants.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
