--- a/Gestion_AcademicoAdministrativa_Abastos/App.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/App.xaml
@@ -1,4 +1,4 @@
-﻿a<Application x:Class="Gestion_AcademicoAdministrativa_Abastos.App"
+﻿<Application x:Class="Gestion_AcademicoAdministrativa_Abastos.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos"
@@ -19,7 +19,6 @@
                 <ResourceDictionary Source="styles/Slider.xaml"/>
                 <ResourceDictionary Source="styles/ComboBox.xaml"/>
                 <ResourceDictionary Source="styles/TabControl.xaml"/>
-                
                 <ResourceDictionary Source="Strings/Constants.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
