--- a/Gestion_AcademicoAdministrativa_Abastos/Styles/TabControl.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Styles/TabControl.xaml
@@ -1,5 +1,93 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos.Styles">
+    <ControlTemplate TargetType="{x:Type TabControl}" x:Key="TabControlTemplate">
+        <Grid KeyboardNavigation.TabNavigation="Cycle">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+
+            <TabPanel x:Name="HeaderPanel"
+                              Grid.Row="0"
+                              Panel.ZIndex="1"
+                              Margin="0,0,4,-1"
+                              IsItemsHost="True"
+                              KeyboardNavigation.TabIndex="1"
+                              Background="{DynamicResource TopBarGradient}" />
+
+            <Border x:Name="Border"
+                            Grid.Row="1"
+                            BorderThickness="0"
+                            Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            KeyboardNavigation.TabNavigation="Local"
+                            KeyboardNavigation.DirectionalNavigation="Contained"
+                            KeyboardNavigation.TabIndex="2">
+
+                <ContentPresenter x:Name="PART_SelectedContentHost"
+                                          Margin="4"
+                                          ContentSource="SelectedContent" />
+            </Border>
+        </Grid>
+    </ControlTemplate>
+
+    <Style TargetType="{x:Type TabControl}" x:Key="{x:Type TabControl}">
+        <Setter Property="BorderBrush" Value="{x:Null}" />
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="TabStripPlacement" Value="Left" />
+        <!--Setter Property="Template" Value="{StaticResource TabControlTemplate}" /-->
+    </Style>
     
+    <Style TargetType="{x:Type TabPanel}" x:Key="{x:Type TabPanel}">
+        <Setter Property="Background" Value="{DynamicResource BackgroundColorfulGradient}" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Margin" Value="15" />
+    </Style>
+    
+    <ControlTemplate x:Key="TabItemTemplate" TargetType="{x:Type TabItem}">
+        <Grid>
+            <Border 
+                Name="Border"
+                Padding="15"
+                Background="{DynamicResource SelectedColorSolid}"
+                BorderBrush="Transparent" 
+                BorderThickness="0" 
+                CornerRadius="0" >
+                <ContentPresenter x:Name="ContentSite"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Center"
+                    ContentSource="Header"
+                    Margin="0"
+                    RecognizesAccessKey="True">
+                    <ContentPresenter.LayoutTransform>
+                        <RotateTransform Angle="270" />
+                    </ContentPresenter.LayoutTransform>
+                </ContentPresenter>
+            </Border>
+        </Grid>
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsSelected" Value="True">
+                <Setter Property="Panel.ZIndex" Value="100" />
+                <Setter TargetName="Border" Property="BorderThickness" Value="0" />
+                <Setter TargetName="Border" Property="Background" Value="{DynamicResource SelectedColorSolid}" />
+                <Setter Property="Background" Value="{DynamicResource SelectedColorSolid}" />
+                <Setter Property="Foreground" Value="{StaticResource MainColorSolid}" />
+            </Trigger>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter TargetName="Border" Property="Background" Value="{StaticResource MainColorSolid}" />
+                <Setter Property="Background" Value="{StaticResource MainColorSolid}" />
+                <Setter Property="Foreground" Value="{StaticResource StandOutColorSolid}" />
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
+    
+    <Style TargetType="{x:Type TabItem}" x:Key="{x:Type TabItem}">
+        <Setter Property="Background" Value="{DynamicResource BackgroundContainerGradient}" />
+        <Setter Property="Foreground" Value="{DynamicResource StandOutColorSolid}" />
+        <Setter Property="BorderBrush" Value="{x:Null}" />
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="Template" Value="{StaticResource TabItemTemplate}" />
+    </Style>
 </ResourceDictionary>
