--- a/Gestion_AcademicoAdministrativa_Abastos/Strings/Constants.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Strings/Constants.xaml
@@ -17,5 +17,6 @@
     <sys:String x:Key="FormPersonaCreationTabItemHeader">Crear Persona</sys:String>
     <sys:String x:Key="FormPersonaRemovalTabItemHeader">Eliminar Persona</sys:String>
     <sys:String x:Key="FormPersonaModifyTabItemHeader">Modificar Persona</sys:String>
+    <sys:String x:Key="FormPersonaRemove">Eliminar Persona</sys:String>
     
 </ResourceDictionary>
